# conclave-room-client-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/include/conclave-room-client/: client.h  client_serialize.h
src/lib/: CMakeLists.txt  client.c  client_serialize.c
src/test/: CMakeLists.txt  test.c
